# rag

./: .gitignore  LICENSE  README.md  bm25_index.pkl  pyproject.toml  retrieval_and_generation.py
chroma_db/: chroma.sqlite3
notebooks/: ingestion.py
raw_document_store/: 0fef4457-4f6b-4538-aa3b-3fea07e7d6ae  10ddf1f3-4e55-4042-964e-2b9b61c23233  123b6772-7c90-4a8e-8b80-a6a54e59a12e  17c657ed-d08d-4133-97cb-cb84cea82ab3  1b1bd3c9-22f7-42d1-a920-94b619b2889d  1ebcafc9-dacc-49d4-9890-f88908bf7e33  1fb80e69-01a5-4353-90b3-4144147bae4b  2337439b-24bc-4548-a251-77a828e1f0e2  276d7508-9fe1-4f68-bd16-290b0cbf860f  2a952037-c685-473d-bc2c-9d2d15949aaf  47957b5f-d178-489a-8ee2-4c0771124b69  5e5e44e9-42c9-4465-a5b6-ce5e0a235292  6bef930c-ce59-40a9-a99a-89189d4d4c66  74b375bb-ac3f-4d3b-99ed-a46279238b04  76ff1159-5ffc-4632-8d7b-79ea9343a892  7736e3fb-a6c9-4b82-8c5c-89b75fec4cc7  77cb9744-9456-46dc-8f09-f1fa02289cfe  79e3a35b-24a2-41d3-8763-a9ab10400b40  801f1757-d8b0-4190-8010-2a48615a80aa  8029d357-dd8a-4877-93c5-fd85c86357ac  8179353c-85cb-4b42-ab2e-0e3d8abfab63  83c99a5f-2ce7-496b-9fca-6d676d3020d5  8e15bde7-ee2e-41f1-8004-8d0d69b8183e  9058b782-ab78-4a03-bc66-33f8147d57d7  927ed79b-da5d-443b-a68f-045698de69dd  94142a11-72cf-4175-b43d-2957d242efdb  96788b79-8816-4131-ad62-a70b0c126bb4  9c52f3d8-6dbd-4ac2-8f05-0db2c366325a  ab5076ab-23de-4a6d-a692-a625760a87b1  b11b4b65-23c9-42eb-af9f-08d4f34b1c6e  b3fe2b63-a3bd-484c-aa9c-b7c0fe53fe67  bd28fa67-5597-486c-a355-084b6e8dfd2a  be2cb8a9-9299-4077-ac67-be0eba376bb9  c24f7087-108e-489b-86e4-a5889f53d4c9  (+14 more)
src/: gen_config.json  (+6 more)
